--- a/apps/article-editor/index.html
+++ b/apps/article-editor/index.html
@@ -54,7 +54,10 @@
                 <div class="sidebar-section collapsed" id="posts-section">
                     <div class="section-header clickable" id="posts-section-header">
                         <h3>Legacy Posts</h3>
-                        <button class="btn-small" id="btn-load-posts">Load</button>
+                        <div style="display:flex;gap:4px;">
+                            <button class="btn-small" id="btn-load-posts">Load</button>
+                            <button class="btn-small" id="btn-convert-posts" title="Convert all legacy posts to guide format">Migrate</button>
+                        </div>
                     </div>
                     <div class="posts-list" id="posts-list">
                         <div class="posts-empty">Click "Load" to browse posts</div>
