--- a/apps/guides/index.html
+++ b/apps/guides/index.html
@@ -6,6 +6,7 @@ permalink: /guides/
 language: kr
 title: 가이드 - 페르소나5 더 팬텀 X 루페르넷
 description: 페르소나5 더 팬텀 X 공략 가이드
+image: /assets/img/home/seo.png
 ---
 
 <head>
@@ -17,7 +18,7 @@ description: 페르소나5 더 팬텀 X 공략 가이드
 <div class="main-wrapper">
     <!-- navigation path -->
     <div class="navigation-path">
-        <script>document.write(`<a href="/?v=${APP_VERSION}">홈</a>`);</script>
+        <script>document.write(`<a href="/?v=${APP_VERSION}" data-kr="홈" data-en="Home" data-jp="ホーム">홈</a>`);</script>
         <span class="separator">/</span>
         <span class="current-page" data-kr="가이드" data-en="Guides" data-jp="ガイド">가이드</span>
     </div>
