--- a/apps/guides/view.html
+++ b/apps/guides/view.html
@@ -6,6 +6,7 @@ permalink: /guides/view/
 language: kr
 title: 가이드 - 페르소나5 더 팬텀 X 루페르넷
 description: 페르소나5 더 팬텀 X 공략 가이드
+image: /assets/img/home/seo.png
 ---
 
 <head>
@@ -15,15 +16,6 @@ description: 페르소나5 더 팬텀 X 공략 가이드
 
 <!-- main contents -->
 <div class="main-wrapper">
-    <!-- navigation path -->
-    <div class="navigation-path">
-        <script>document.write(`<a href="/?v=${APP_VERSION}">홈</a>`);</script>
-        <span class="separator">/</span>
-        <a href="/guides/" data-kr="가이드" data-en="Guides" data-jp="ガイド">가이드</a>
-        <span class="separator">/</span>
-        <span class="current-page" id="breadcrumb-title">...</span>
-    </div>
-
     <!-- Guide View Container -->
     <div class="guide-view-container" id="guide-view-container">
         <div class="guides-loading">Loading guide</div>
