--- a/apps/guides/pages/growth-material.html
+++ b/apps/guides/pages/growth-material.html
@@ -2,11 +2,11 @@
 layout: default
 custom_css: []
 custom_js: []
-permalink: /article/Growth-Material/
+permalink: /article/growth-material/
 language: kr
 title: 육성 재료 요구량 총정리 (LV80) - 루페르넷
 description: 페르소나5 더 팬텀 X 캐릭터 육성 재료 요구량 총정리
-image: /apps/guides/data/assets/Growth-Material/1.webp
+image: /apps/guides/data/assets/growth-material/1.webp
 ---
 
 <head>
@@ -21,9 +21,9 @@ image: /apps/guides/data/assets/Growth-Material/1.webp
 </div>
 
 <script>
-document.addEventListener('DOMContentLoaded', () => {
-    Navigation.load('article');
-    VersionChecker.check();
-    Guides.loadGuide('Growth-Material');
-});
+    document.addEventListener('DOMContentLoaded', () => {
+        Navigation.load('article');
+        VersionChecker.check();
+        Guides.loadGuide('growth-material');
+    });
 </script>
