--- a/404.html
+++ b/404.html
@@ -4,20 +4,37 @@ layout: null
 ---
 <!DOCTYPE html>
 <html lang="kr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404 - 페이지를 찾을 수 없습니다</title>
     <style>
-        body { text-align: center; font-family: Arial, sans-serif; padding: 50px; }
-        h1 { font-size: 50px; }
-        p { font-size: 20px; }
-        a { color: #007BFF; text-decoration: none; }
+        body {
+            text-align: center;
+            font-family: Arial, sans-serif;
+            padding: 50px;
+        }
+
+        h1 {
+            font-size: 50px;
+        }
+
+        p {
+            font-size: 20px;
+        }
+
+        a {
+            color: #007BFF;
+            text-decoration: none;
+        }
     </style>
 </head>
+
 <body>
     <h1>404</h1>
     <p>이 페이지는 존재하지 않습니다.</p>
     <p><a href="{{ site.baseurl }}/">홈으로 돌아가기</a></p>
 </body>
+
 </html>
