--- a/apps/guides/pages/growth-material.html
+++ b/apps/guides/pages/growth-material.html
@@ -5,7 +5,7 @@ custom_js: []
 permalink: /article/growth-material/
 language: kr
 title: 육성 재료 요구량 총정리 (LV80) - 루페르넷
-description: 페르소나5 더 팬텀 X 캐릭터 육성 재료 요구량 총정리
+description: LEVEL (LV 80) Full Upgrade itemcount173436350392k Detail LV10 → 205--20 → 3012--30 → 40-6-40 → 50-10-50 → 60-18-60 → 70--1270 → 80--24 WEAPON (LV 80) ...
 image: /apps/guides/data/assets/growth-material/1.webp
 ---
 
@@ -21,9 +21,9 @@ image: /apps/guides/data/assets/growth-material/1.webp
 </div>
 
 <script>
-    document.addEventListener('DOMContentLoaded', () => {
-        Navigation.load('article');
-        VersionChecker.check();
-        Guides.loadGuide('growth-material');
-    });
+document.addEventListener('DOMContentLoaded', () => {
+    Navigation.load('article');
+    VersionChecker.check();
+    Guides.loadGuide('growth-material');
+});
 </script>
