--- a/apps/guides/pages/lv100.html
+++ b/apps/guides/pages/lv100.html
@@ -6,7 +6,7 @@ permalink: /article/lv100/
 language: kr
 title: 심상 코어 (LV100) - 루페르넷
 description: 심상 코어(심상 활성화)는 한국 버전 4.7.1에 공개된 신규 육성 시스템으로, 기존 캐릭터의 레벨 상한을 최대 100까지 늘리고 신규 패시브 2개를 획득 가능한 추가 강화 방식이다.이외에도 동일 속성의 아군들을 모두 강화시키는 '속성 공명'과 동일 속성들이 사용...
-image: /apps/guides/data/assets/lv100/pasted-1770716728489.png
+image: /apps/guides/data/assets/lv100/lv100.gif
 ---
 
 <head>
