--- a/index.html
+++ b/index.html
@@ -126,9 +126,8 @@ jp: /?lang=jp
                     <h3 id="guide-city-title">도시 생활</h3>
                 </div>
                 <div class="guide-card-content">
-                    <div class="article"><a
-                            href="https://docs.google.com/spreadsheets/d/1L47W0r5nHpAlU_qUY3HuslcqBRS78tHC682eFCXiftM"
-                            target="_blank" style="text-decoration: none; color: inherit;">∘ 협력자 선물 & 선택지</a></div>
+                    <div class="article"><a href="https://lufel.net/synergy/" target="_blank"
+                            style="text-decoration: none; color: inherit;">∘ 협력자 선물 & 선택지</a></div>
                     <div class="article"><a
                             href="https://gall.dcinside.com/mgallery/board/view/?id=persona5phantomx&no=158597"
                             target="_blank" style="text-decoration: none; color: inherit;">∘ 협력자 우선순위 추천</a></div>
@@ -147,7 +146,7 @@ jp: /?lang=jp
                     <div class="article"><a
                             href="https://gall.dcinside.com/mgallery/board/view/?id=persona5phantomx&no=170601"
                             target="_blank" style="text-decoration: none; color: inherit;">∘ 계시에 대하여</a></div>
-                    <div class="article"><a href="https://arca.live/b/persona5x/115843217" target="_blank"
+                    <div class="article"><a href="https://lufel.net/article/revelation-space-card/" target="_blank"
                             style="text-decoration: none; color: inherit;">∘ 주 성위 계시 입수처</a></div>
                     <div class="article"><a
                             href="https://gall.dcinside.com/mgallery/board/view/?id=persona5phantomx&no=175353"
