--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@ jp: /?lang=jp
     <div class="separator-line"></div>
     <div class="guides-container">
         <div class="posts-header">
-            <h2><a href="./apps/guides/" style="text-decoration: none; color: inherit;" id="guides-title">가이드</a></h2>
-            <a href="./apps/guides/" class="show-more-characters-btn" style="text-decoration: none; color: inherit;"
+            <h2><a href="/article/" style="text-decoration: none; color: inherit;" id="guides-title">가이드</a></h2>
+            <a href="/article/" class="show-more-characters-btn" style="text-decoration: none; color: inherit;"
                 id="show-more-guides-btn"><img src="{{ site.baseurl }}/assets/img/home/news_more2.png" alt="logo"
                     style="max-height: 11px; opacity: 0.75;"></a>
         </div>
