--- a/apps/defense-calc/index.html
+++ b/apps/defense-calc/index.html
@@ -72,6 +72,10 @@ redirect_from:
                             </svg>
                         </span>
                     </div>
+                    <div class="boss-info-inline" id="bossInfoInline" role="note">
+                        <span class="boss-info-inline-badge" id="bossInfoInlineBadge">Initial Data</span>
+                        <span class="boss-info-inline-text" id="bossInfoInlineText">Launch-period data only. Exact values are currently unobtainable and unverifiable.</span>
+                    </div>
                     <div class="boss-list-container">
                         <div class="boss-list" id="bossList">
                             <!-- 보스 리스트가 여기에 동적으로 생성됨 -->
