--- a/apps/persona/index.html
+++ b/apps/persona/index.html
@@ -112,7 +112,10 @@ jp: /persona/?lang=jp
         <!-- Right Panel: Detail -->
         <div class="persona-detail-panel">
             <div id="personaDetailContent" class="sticky-content">
-                <div class="empty-state-message">
+                <div class="detail-placeholder">
+                    <div class="loading-spinner"></div>
+                </div>
+                <div class="empty-state-message" style="display: none;">
                     <p data-i18n="emptyStateMessage">페르소나를 선택하여 상세 정보를 확인하세요.</p>
                 </div>
             </div>
