--- a/login/index.html
+++ b/login/index.html
@@ -20,31 +20,17 @@ language: kr
   </div>
 </div>
 
+<script defer src="{{ site.baseurl }}/i18n/service/i18n-adapter.js?v={{ site.time | date: '%s' }}"></script>
 <script>
-// i18n
-const translations = {
-  kr: {
-    title: '로그인',
-    button: 'Google로 로그인',
-    loading: '<span class="loading-spinner"></span> 구글 로그인 중...',
-    confirm: '구글 로그인을 위해 인증 페이지로 이동합니다.\n\n※ 구글 인증 과정에서 나타나는 supabase 링크는 정상입니다.',
-    error: '로그인 처리 중 문제가 발생했습니다.'
-  },
-  en: {
-    title: 'Login',
-    button: 'Sign in with Google',
-    loading: '<span class="loading-spinner"></span> Signing in with Google...',
-    confirm: 'You will be redirected to the Google authentication page.\n\n※ Seeing a supabase link during Google auth is normal.',
-    error: 'An error occurred during login.'
-  },
-  jp: {
-    title: 'ログイン',
-    button: 'Googleでログイン',
-    loading: '<span class="loading-spinner"></span> Googleでログイン中...',
-    confirm: 'Google認証ページに移動します。\n\n※ 認証中に表示される supabase リンクは正常です。',
-    error: 'ログイン処理中にエラーが発生しました。'
+function getI18nText(key, fallback = '') {
+  if (typeof window.t === 'function') {
+    return window.t(key, fallback);
   }
-};
+  if (window.I18nService && typeof window.I18nService.t === 'function') {
+    return window.I18nService.t(key, fallback);
+  }
+  return fallback || key;
+}
 
 function getLang() {
   try {
@@ -57,17 +43,25 @@ function getLang() {
 }
 
 function getButtonLabelHTML(lang) {
-  const t = translations[lang] || translations.kr;
-  return `<img src="https://www.google.com/favicon.ico" alt="Google" width="20"> ${t.button}`;
+  const label = getI18nText('button', 'Google로 로그인');
+  return `<img src="https://www.google.com/favicon.ico" alt="Google" width="20"> ${label}`;
 }
 
 function applyLoginTexts(lang) {
-  const t = translations[lang] || translations.kr;
+  const titleText = getI18nText('title', '로그인');
   // h2
   const titleEl = document.querySelector('.auth-box h2');
-  if (titleEl) titleEl.textContent = t.title;
+  if (titleEl) titleEl.textContent = titleText;
   // document title
-  document.title = t.title;
+  document.title = getI18nText('seoTitle', titleText);
+  const metaDescription = document.querySelector('meta[name="description"]');
+  const ogTitle = document.querySelector('meta[property="og:title"]');
+  const ogDescription = document.querySelector('meta[property="og:description"]');
+  const fallbackDescription = (metaDescription && metaDescription.getAttribute('content')) || '';
+  const seoDescription = getI18nText('seoDescription', fallbackDescription);
+  if (metaDescription) metaDescription.setAttribute('content', seoDescription);
+  if (ogTitle) ogTitle.setAttribute('content', document.title);
+  if (ogDescription) ogDescription.setAttribute('content', seoDescription);
   // button
   const btn = document.getElementById('googleLogin');
   if (btn) btn.innerHTML = getButtonLabelHTML(lang);
@@ -82,15 +76,14 @@ document.getElementById('googleLogin').addEventListener('click', async (e) => {
   try {
     const button = e.currentTarget;
     const lang = getLang();
-    const t = translations[lang] || translations.kr;
     const originalText = getButtonLabelHTML(lang);
     button.disabled = true;
-    button.innerHTML = t.loading;
+    button.innerHTML = getI18nText('loading', '<span class="loading-spinner"></span> 구글 로그인 중...');
 
     const redirectUrl = getRedirectUrl();
     sessionStorage.setItem('auth_redirect', redirectUrl);
 
-    const confirmMessage = (translations[lang] || translations.kr).confirm;
+    const confirmMessage = getI18nText('confirm', '구글 로그인을 위해 인증 페이지로 이동합니다.\n\n※ 구글 인증 과정에서 나타나는 supabase 링크는 정상입니다.');
 
     if (window.confirm(confirmMessage)) {
       const { error } = await supabase.auth.signInWithOAuth({
@@ -108,8 +101,7 @@ document.getElementById('googleLogin').addEventListener('click', async (e) => {
     }
   } catch (error) {
     console.error('로그인 에러:', error);
-    const lang = getLang();
-    alert((translations[lang] || translations.kr).error);
+    alert(getI18nText('error', '로그인 처리 중 문제가 발생했습니다.'));
     const button = document.getElementById('googleLogin');
     button.disabled = false;
     button.innerHTML = getButtonLabelHTML(getLang());
@@ -132,9 +124,18 @@ async function checkLoginStatus() {
   }
 }
 
-document.addEventListener('DOMContentLoaded', () => {
+document.addEventListener('DOMContentLoaded', async () => {
   Navigation.load('');
   VersionChecker.check();
+  const currentLang = getLang();
+  if (typeof initPageI18n === 'function') {
+    await initPageI18n('login');
+    if (typeof setLang === 'function') {
+      await setLang(currentLang);
+    }
+  } else if (window.I18nService && typeof window.I18nService.init === 'function') {
+    await window.I18nService.init('login', currentLang);
+  }
   applyLoginTexts(getLang());
   checkLoginStatus();
 });
